# pixelprobe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
pixelprobe/: main.py
pixelprobe/analysis/: statistics.py
pixelprobe/core/: array_handler.py
pixelprobe/gui/: camera_roll.py  main_window.py  roi_selector.py
pixelprobe/gui/dialogs/: array_dialogs.py  file_dialogs.py  plotting_dialog.py
pixelprobe/processing/: denoising.py  interpolation.py
pixelprobe/utils/: config.py  file_io.py  logging_setup.py
